[package]
name = "mtime-rewind"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "mtime-rewind"

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
clap = { version = "4.4.0", features = ["derive"] }
env_logger = "0.10.0"
filetime = "0.2.22"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
sha2 = "0.10.7"
walkdir = "2.3.3"

[dev-dependencies]
tempfile = "3.8.0"
